{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 349,
  "lineage": "3b61bb68-5752-2056-d2c6-351c9665e7a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.5",
            "domain": "vpc",
            "id": "eipalloc-0e5e5678d4fab9f57",
            "public_dns": "ec2-18-218-87-220.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.87.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Development-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026dea5602e368e96",
            "arn": "arn:aws:ec2:us-east-2:071229720313:instance/i-0299223dfed642cd8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0299223dfed642cd8",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "publicKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00a449ba8a5101e96",
            "private_dns": "ip-10-0-1-228.us-east-2.compute.internal",
            "private_ip": "10.0.1.228",
            "public_dns": "ec2-18-218-8-229.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.8.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-047db7e035473f4c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07dc334a13ccb3ed8",
            "tags": {
              "Name": "Jenkins-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01253a4c6140c24f1"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2key",
            "aws_security_group.sg_allow_ssh_jenkins",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "development-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07dd001af89f29942",
            "owner_id": "071229720313",
            "tags": {
              "Name": "Development-IGW"
            },
            "vpc_id": "vpc-043d7b9b0f54d27fe"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5e5678d4fab9f57",
            "id": "nat-0140fb7547c2f966a",
            "network_interface_id": "eni-04a088afcb724b652",
            "private_ip": "10.0.1.107",
            "public_ip": "18.218.87.220",
            "subnet_id": "subnet-07dc334a13ccb3ed8",
            "tags": {
              "Name": "Development-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04cea6cb98c638ff41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0140fb7547c2f966a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04cea6cb98c638ff4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07dd001af89f29942",
            "id": "r-rtb-0c8a8030a80d231381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c8a8030a80d23138",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.development-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04cea6cb98c638ff4",
            "owner_id": "071229720313",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Private-RouteTable"
            },
            "vpc_id": "vpc-043d7b9b0f54d27fe"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c8a8030a80d23138",
            "owner_id": "071229720313",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Public-RouteTable"
            },
            "vpc_id": "vpc-043d7b9b0f54d27fe"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e39e6396c5a2491f",
            "route_table_id": "rtb-04cea6cb98c638ff4",
            "subnet_id": "subnet-0706fb707411d0f1e"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092818c731e572bb5",
            "route_table_id": "rtb-04cea6cb98c638ff4",
            "subnet_id": "subnet-0aa3bae40aae4fc43"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-3-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed8cab55817fa805",
            "route_table_id": "rtb-04cea6cb98c638ff4",
            "subnet_id": "subnet-0428976048c57cbfe"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-3",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c01af281f308f787",
            "route_table_id": "rtb-0c8a8030a80d23138",
            "subnet_id": "subnet-07dc334a13ccb3ed8"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-2-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02313469601573af6",
            "route_table_id": "rtb-0c8a8030a80d23138",
            "subnet_id": "subnet-04906f5ec94e66ade"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-3-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0842eed70307319c8",
            "route_table_id": "rtb-0c8a8030a80d23138",
            "subnet_id": "subnet-04fd8608508f6737b"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-3",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_ssh_jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071229720313:security-group/sg-01253a4c6140c24f1",
            "description": "Allow SSH and Jenkins inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01253a4c6140c24f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_ssh_jenkins",
            "name_prefix": null,
            "owner_id": "071229720313",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-043d7b9b0f54d27fe"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071229720313:subnet/subnet-0706fb707411d0f1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0706fb707411d0f1e",
            "map_public_ip_on_launch": false,
            "owner_id": "071229720313",
            "tags": {
              "Name": "Development-Private-Subnet-1"
            },
            "vpc_id": "vpc-043d7b9b0f54d27fe"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071229720313:subnet/subnet-0aa3bae40aae4fc43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0aa3bae40aae4fc43",
            "map_public_ip_on_launch": false,
            "owner_id": "071229720313",
            "tags": {
              "Name": "Development-Private-Subnet-2"
            },
            "vpc_id": "vpc-043d7b9b0f54d27fe"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071229720313:subnet/subnet-0428976048c57cbfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-0428976048c57cbfe",
            "map_public_ip_on_launch": false,
            "owner_id": "071229720313",
            "tags": {
              "Name": "Development-Private-Subnet-3"
            },
            "vpc_id": "vpc-043d7b9b0f54d27fe"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071229720313:subnet/subnet-07dc334a13ccb3ed8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07dc334a13ccb3ed8",
            "map_public_ip_on_launch": false,
            "owner_id": "071229720313",
            "tags": {
              "Name": "Development-Public-Subnet-1"
            },
            "vpc_id": "vpc-043d7b9b0f54d27fe"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071229720313:subnet/subnet-04906f5ec94e66ade",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04906f5ec94e66ade",
            "map_public_ip_on_launch": false,
            "owner_id": "071229720313",
            "tags": {
              "Name": "Development-Public-Subnet-2"
            },
            "vpc_id": "vpc-043d7b9b0f54d27fe"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071229720313:subnet/subnet-04fd8608508f6737b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-04fd8608508f6737b",
            "map_public_ip_on_launch": false,
            "owner_id": "071229720313",
            "tags": {
              "Name": "Development-Public-Subnet-3"
            },
            "vpc_id": "vpc-043d7b9b0f54d27fe"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "development-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071229720313:vpc/vpc-043d7b9b0f54d27fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ea6622c5677a3c3d",
            "default_route_table_id": "rtb-002ce3ad44bc8bcee",
            "default_security_group_id": "sg-0ca06ccb8d1fc4a2e",
            "dhcp_options_id": "dopt-9077c1fb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-043d7b9b0f54d27fe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-002ce3ad44bc8bcee",
            "owner_id": "071229720313",
            "tags": {
              "Name": "Development-VPC"
            }
          }
        }
      ]
    }
  ]
}